/*
 * HDMlib - Hierarchical Data Management library
 *
 * Copyright (c) 2014-2015 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2015-07-08
- bug fix at reduceError (snd & rcv buffer were same)
- introduce BUILD_DIR to keep source directory clean

------------------
2015-06-02
- fix issues of pull request #4

------------------
2015-05-30
- Fix output tp file, vector notation in Domain {}
- update date of copyright
- rearrange doc/

------------------
2015-03-05
- Fix build on Intel MPI compilerwith mpiFCCpx

------------------
2015-03-04
- Fix build on Intel MPI compiler

------------------
2015-02-17
- Move template code body to header file

------------------
2014-05-15
- r6 update Vec3class 1.1 [ver 0.5.1]

------------------
2014-04-02
- r5 update doc & comment [ver 0.5.0]

------------------
2014-03-23
- r4 update Vec3.h [ver 0.4.0]

------------------
2014-03-17
- r3 common namespace of Vec3class [ver 0.3.0]

------------------
2014-03-15
- r2 class library package [ver 0.2.0]

------------------
2014-01-25
- r1 Check compile and package
- r0 Initial commit