@@ -159,12 +159,12 @@ HEADERS = $(doc_include_HEADERS)
 am__tagged_files = $(HEADERS) $(SOURCES) $(TAGS_FILES) $(LISP)
 am__DIST_COMMON = $(srcdir)/Makefile.in
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/hdm/hdm/config/missing aclocal-1.15
+ACLOCAL = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/HDMlib-0.7.0/config/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
-AUTOCONF = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/hdm/hdm/config/missing autoconf
-AUTOHEADER = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/hdm/hdm/config/missing autoheader
-AUTOMAKE = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/hdm/hdm/config/missing automake-1.15
+AUTOCONF = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/HDMlib-0.7.0/config/missing autoconf
+AUTOHEADER = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/HDMlib-0.7.0/config/missing autoheader
+AUTOMAKE = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/HDMlib-0.7.0/config/missing automake-1.15
 AWK = awk
 BCM_CFLAGS = -I/usr/local/BCMTools/include
 BCM_DIR = /usr/local/BCMTools
@@ -200,7 +200,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/hdm/hdm/config/missing makeinfo
+MAKEINFO = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/HDMlib-0.7.0/config/missing makeinfo
 MAKE_SUB_DIRS = src doc
 MKDIR_P = /usr/local/bin/gmkdir -p
 MPI_CFLAGS = 
@@ -224,10 +224,10 @@ TP_CFLAGS = -I/usr/local/FFV/TextParser/include
 TP_DIR = /usr/local/FFV/TextParser
 TP_LDFLAGS = -L/usr/local/FFV/TextParser/lib -lTPmpi
 VERSION = 0.7.0
-abs_builddir = /Daily/Development/SphDev/Module/HDMlib/hdm/hdm/BUILD_DIR/doc
-abs_srcdir = /Daily/Development/SphDev/Module/HDMlib/hdm/hdm/BUILD_DIR/../doc
-abs_top_builddir = /Daily/Development/SphDev/Module/HDMlib/hdm/hdm/BUILD_DIR
-abs_top_srcdir = /Daily/Development/SphDev/Module/HDMlib/hdm/hdm/BUILD_DIR/..
+abs_builddir = /Daily/Development/SphDev/Module/HDMlib/HDMlib-0.7.0/BUILD_DIR/doc
+abs_srcdir = /Daily/Development/SphDev/Module/HDMlib/HDMlib-0.7.0/BUILD_DIR/../doc
+abs_top_builddir = /Daily/Development/SphDev/Module/HDMlib/HDMlib-0.7.0/BUILD_DIR
+abs_top_srcdir = /Daily/Development/SphDev/Module/HDMlib/HDMlib-0.7.0/BUILD_DIR/..
 ac_ct_CC = gcc
 ac_ct_CXX = 
 am__include = include
@@ -247,7 +247,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/hdm/hdm/config/install-sh
+install_sh = ${SHELL} /Daily/Development/SphDev/Module/HDMlib/HDMlib-0.7.0/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
